bk_ida/gccida/c1/make_memloc
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/reload.c:4987:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/reload.c:4987:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/reload.c:4993:1: error: use of undeclared identifier 'result'
result = adjust_address_1( v3, ( machine_mode)*( ( unsigned __int8 *)ad + 2), 0LL, 0, 1); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/reload.c:4993:34: error: use of undeclared identifier 'machine_mode'
result = adjust_address_1( v3, ( machine_mode)*( ( unsigned __int8 *)ad + 2), 0LL, 0, 1); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/reload.c:4994:6: error: use of undeclared identifier 'result'
if ( result == reg_equiv_memory_loc[regno] ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/reload.c:4995:18: error: use of undeclared identifier 'result'
return copy_rtx( result); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/reload.c:4996:8: error: use of undeclared identifier 'result'
return result; 
       ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_memloc/src/obj/reload.o] Error 1
